--- a/TestingBlendshapesFormApp/Form1.resx
+++ b/TestingBlendshapesFormApp/Form1.resx
@@ -64,8 +64,11 @@
     <value>181, 17</value>
   </metadata>
   <data name="finalSubmitInstructions.Text" xml:space="preserve">
-    <value>Once you've selected the appropriate face layer, click below to create a new Quill project that contains the original layers, plus named starter layers (based off the original face) for the 51 blendshapes compatible with Unity Face Capture.</value>
+    <value>Select face layer above, then click below to create and save (choose folder name and location) a new Quill project that contains the original layers, plus named starter layers (based off the original face) for the 51 blendshapes compatible with Unity Face Capture.</value>
   </data>
+  <metadata name="backgroundWorker2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>350, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>81</value>
   </metadata>
